--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,30 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yellowtail&display=swap');
 
- .header {
-  z-index: 10;
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  height: 80px;
-  display: flex;
+ /* .header { */
+  /* z-index: 10; */
+  /* position: fixed; */
+  /* top: 0px; */
+  /* width: 100%; */
+  /* height: 80px; */
+  /* display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  background-color: transparent;
-  transition: top 0.2s ease-in-out;
-  align-items: center;
-  text-decoration: none;
-  }
+  justify-content: space-between; */
+  /* background-color: transparent; */
+  /* transition: top 0.2s ease-in-out; */
+  /* align-items: center; */
+  /* text-decoration: none; */
+  /* } */
 
-  .title-name {
+  /* .title-name { */
     /* font-family: 'Yellowtail', cursive; */
-    color: #4361ee !important;
-    display: flex;
-    justify-content: flex-start;
-    margin-left: 30px;
-    text-decoration: none !important;
-    font-size: 40px !important;
-    font-weight: 800;
-  }
+    /* color: #4361ee !important; */
+    /* display: flex; */
+    /* justify-content: flex-start; */
+    /* margin-left: 30px; */
+    /* text-decoration: none !important; */
+    /* font-size: 40px !important; */
+    /* font-weight: 800; */
+  /* } */
   
   .list-options {
     list-style: none;
@@ -53,121 +53,10 @@
     color:#4361ee !important;
   }
  
-  .active-title {
-    transition: top 0.2s ease-in-out;
-    color:#4361ee;
-    text-decoration: underline;
-
-  } 
+  /* .active-title {
+    color:#4361ee !important;
+  }  */
   
-
-
-
-
-
-
-  /* .header {
-    background-color: transparent;
-    position: fixed;
-    width: 100%;
-    z-index: 3;
-  } */
-  
-  /* .header ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    overflow: hidden;
-  }
-  
-  .header li a {
-    display: block;
-
-    text-decoration: none;
-  }
-  
-
-  .header .logo {
-    display: block;
-    float: left;
-    font-size: 50px;
-    padding: 10px 10px;
-    text-decoration: none;
-  }
-  
-  /* menu */
-/*   
-  .header .menu {
-    clear: both;
-    max-height: 0;
-    transition: max-height .2s ease-out;
-  } */
-  
-  /* menu icon */
-  
-  /* .header .menu-icon {
-    cursor: pointer;
-    display: inline-block;
-    float: right;
-    padding: 28px 20px;
-    position: relative;
-    user-select: none;
-  }
-  
-  .header .menu-icon .navicon {
-    background: #333;
-    display: block;
-    height: 2px;
-    position: relative;
-    transition: background .2s ease-out;
-    width: 18px;
-  }
-  
-  .header .menu-icon .navicon:before,
-  .header .menu-icon .navicon:after {
-    background: #333;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
-  }
-  
-  .header .menu-icon .navicon:before {
-    top: 5px;
-  }
-  
-  .header .menu-icon .navicon:after {
-    top: -5px;
-  } */
-  
-  /* menu btn */
-/*   
-  .header .menu-btn {
-    display: none;
-  }
-  
-  .header .menu-btn:checked ~ .menu {
-    max-height: 240px;
-  }
-  
-  .header .menu-btn:checked ~ .menu-icon .navicon {
-    background: transparent;
-  }
-  
-  .header .menu-btn:checked ~ .menu-icon .navicon:before {
-    transform: rotate(-45deg);
-  }
-  
-  .header .menu-btn:checked ~ .menu-icon .navicon:after {
-    transform: rotate(45deg);
-  }
-  
-  .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-  .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-    top: 0;
-  } */
   
   /* 48em = 768px */
   
