--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,63 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap');
 
+body {
+  box-sizing: border-box;
+
+}
+.active:hover {
+  animation: bounce 1s ease-in-out infinite;
+
+@keyframes bounce {
+  50% {
+    transform: translateY(0%);
+    animationTimingFunction: cubic-bezier(0.8, 0, 1, 1);
+  }
+  0%, 100% {
+    transform: translateY(-25%);
+    animationTimingFunction: cubic-bezier(0, 0, 0.2, 1);
+  }
+}
+}
+.fleximportant {
+  display: flex !important;
+}
+
+.border-img {
+  margin-top: 10px;
+  width: 20%;
+  border: 3px solid #000000 !important;
+  transition: all 0.2s;
+}
+.border-img:hover {
+  box-shadow: 5px 5px black;
+  color: #000000 !important;
+  transform: translate(-0.4rem, -0.4rem);
+}
+@media (max-width:48em) {
+  .border-img {
+    width: 160px;
+    height: 100%;
+    
+  }
+  .border-img img {
+    vertical-align: -webkit-baseline-middle;
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    object-position: 0px 0px;
+  }
+}
+
 
 .cursive {
   font-family: "Syne", sans-serif;
   font-weight: 700;
 }
+
+.active-title {
+  color:#4361ee !important;
+} 
 
 .prose-img {
   margin-left: auto;
@@ -16,7 +68,6 @@
 }
 
 .home-name {
-  font-size: 110px;
   line-height: 6rem;
   font-weight: 800;
 }
