--- a/src/index.css
+++ b/src/index.css
@@ -37,12 +37,12 @@ body {
   transform: translate(-0.4rem, -0.4rem);
 }
 @media (max-width:48em) {
-  .border-img {
+  .horizontal-img {
     width: 160px;
     height: 100%;
     
   }
-  .border-img img {
+  .horizontal-img img {
     vertical-align: -webkit-baseline-middle;
     width: 100%;
     height: 150px;
