--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,700;0,900;1,700&display=swap');
 
 body {
   box-sizing: border-box;
-
 }
-.active:hover {
+.logo {
+  font-family: 'Merriweather', serif;
+}
+/* .active:hover {
   animation: bounce 1s ease-in-out infinite;
 
 @keyframes bounce {
@@ -19,8 +23,8 @@ body {
     transform: translateY(-25%);
     animationTimingFunction: cubic-bezier(0, 0, 0.2, 1);
   }
-}
-}
+} 
+}*/
 .fleximportant {
   display: flex !important;
 }
@@ -53,13 +57,11 @@ body {
 
 
 .cursive {
-  font-family: "Syne", sans-serif;
+  font-family: 'Merriweather', serif;
+  /* font-family: "Syne", sans-serif; */
   font-weight: 700;
 }
 
-.active-title {
-  color:#4361ee !important;
-} 
 
 .prose-img {
   margin-left: auto;
@@ -70,4 +72,20 @@ body {
 .home-name {
   line-height: 6rem;
   font-weight: 800;
+}
+
+.hvr-grow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.2);
 }
